// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`restore history when index > 0 1`] = `
Object {
  "basename": "",
  "blocked": null,
  "direction": "forward",
  "entries": Array [
    Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "key": "345678",
        "pathname": "/",
        "scene": "",
        "search": "",
        "url": "/",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "key": "345678",
        "pathname": "/second",
        "scene": "",
        "search": "",
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
  ],
  "from": null,
  "hash": "",
  "index": 1,
  "key": "345678",
  "kind": "load",
  "length": 2,
  "n": 1,
  "params": Object {},
  "pathname": "/second",
  "pop": false,
  "prev": Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "index": 0,
      "key": "345678",
      "pathname": "/",
      "scene": "",
      "search": "",
      "url": "/",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "FIRST",
  },
  "query": Object {},
  "scene": "",
  "search": "",
  "state": Object {},
  "status": 200,
  "type": "SECOND",
  "universal": false,
  "url": "/second",
}
`;

exports[`restore history when index > 0 2`] = `
Object {
  "entries": Array [
    Array [
      "/",
      Object {},
      "345678",
    ],
    Array [
      "/second",
      Object {},
      "345678",
    ],
  ],
  "index": 1,
}
`;

exports[`restore history when index > 0 3`] = `
Object {
  "entries": Array [
    Array [
      "/",
      Object {},
      "345678",
    ],
    Array [
      "/second",
      Object {},
      "345678",
    ],
  ],
  "index": 0,
}
`;

exports[`restore history when index > 0:  - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "blocked": null,
    "direction": "backward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/",
          "scene": "",
          "search": "",
          "url": "/",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "scene": "",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "index": 0,
    "key": "345678",
    "kind": "back",
    "length": 2,
    "n": -1,
    "pathname": "/",
    "pop": true,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 1,
        "key": "345678",
        "pathname": "/second",
        "scene": "",
        "search": "",
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "FIRST",
}
`;

exports[`restore history when index > 0:  - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`restore history when index > 0:  - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`restore history when index > 0:  - sessionStorage 1`] = `
Object {
  "entries": Array [
    Array [
      "/",
      Object {},
      "345678",
    ],
    Array [
      "/second",
      Object {},
      "345678",
    ],
  ],
  "index": 0,
}
`;

exports[`restore history when index > 0:  - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "backward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/",
          "scene": "",
          "search": "",
          "url": "/",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "scene": "",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "key": "345678",
    "kind": "back",
    "length": 2,
    "n": -1,
    "params": Object {},
    "pathname": "/",
    "pop": true,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 1,
        "key": "345678",
        "pathname": "/second",
        "scene": "",
        "search": "",
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/",
  },
  "title": "FIRST",
}
`;

exports[`restore history when index > 0:  - title 1`] = `"FIRST"`;

exports[`restore history when index > 0:  - windowLocation 1`] = `"/"`;
